modification bouton color picker

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <option value="triad">triad</option>
           <option value="quad">Quad</option>
         </select>
-        <button>Get color scheme-picker</button>
+        <button>Get color Scheme</button>
       </form>
       <div id="color-container">
         <div id="premiere-couleur" class="color-font"></div>
