modification fetch et display colors

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <button>Get color Scheme</button>
       </form>
       <div id="color-container">
-        <div id="premiere-couleur" class="color-font"></div>
+        <!-- <div id="premiere-couleur" class="color-font"></div>
         <div id="deuxieme-couleur" class="color-font"></div>
         <div id="troisieme-couleur" class="color-font"></div>
         <div id="quatrieme-couleur" class="color-font"></div>
-        <div id="cinquieme-couleur" class="color-font"></div>
+        <div id="cinquieme-couleur" class="color-font"></div> -->
       </div>
       <div id="color-container-hex">
         <div id="premiere-couleur-hex" class="hex-color"></div>
