styling color value display

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div id="quatrieme-couleur" class="color-font"></div>
         <div id="cinquieme-couleur" class="color-font"></div> -->
       </div>
-      <div id="color-container-hex">
+      <!-- <div id="color-container-hex">
         <div id="premiere-couleur-hex" class="hex-color"></div>
         <div id="deuxieme-couleur-hex" class="hex-color"></div>
         <div id="troisieme-couleur-hex" class="hex-color"></div>
         <div id="quatrieme-couleur-hex" class="hex-color"></div>
         <div id="cinquieme-couleur-hex" class="hex-color"></div>
-      </div>
+      </div> -->
     </div>
     <script src="script.js"></script>
   </body>
