--- a/index.html
+++ b/index.html
@@ -23,20 +23,7 @@
         </select>
         <button>Get color Scheme</button>
       </form>
-      <div id="color-container">
-        <!-- <div id="premiere-couleur" class="color-font"></div>
-        <div id="deuxieme-couleur" class="color-font"></div>
-        <div id="troisieme-couleur" class="color-font"></div>
-        <div id="quatrieme-couleur" class="color-font"></div>
-        <div id="cinquieme-couleur" class="color-font"></div> -->
-      </div>
-      <!-- <div id="color-container-hex">
-        <div id="premiere-couleur-hex" class="hex-color"></div>
-        <div id="deuxieme-couleur-hex" class="hex-color"></div>
-        <div id="troisieme-couleur-hex" class="hex-color"></div>
-        <div id="quatrieme-couleur-hex" class="hex-color"></div>
-        <div id="cinquieme-couleur-hex" class="hex-color"></div>
-      </div> -->
+      <div id="color-container"></div>
     </div>
     <script src="script.js"></script>
   </body>
